kube/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careerpolitics-worker
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: careerpolitics
      component: worker
  template:
    metadata:
      labels:
        app: careerpolitics
        component: worker
    spec:
      containers:
        - name: worker
          image: muraridevv/careerpolitics-platform:latest
          command: ["bundle", "exec", "sidekiq"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
