kube/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: careerpolitics-web
  namespace: production
spec:
  selector:
    app: careerpolitics
    component: web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
